changed to .hbs

--- a/views/layouts/main2.hbs
+++ b/views/layouts/main2.hbs
@@ -33,7 +33,7 @@
                 </li>
             </ul>
         </nav>
-        <a href="patient_dash"><button class="flexbox-navbar-button">Log in</button></a>
+        <a href="login_page"><button class="flexbox-navbar-button">Log in</button></a>
 
     </header>
 
