--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -672,6 +672,195 @@ img {
     font-weight: 700;
 }
 
+/* Login Page Styles*/
+p {
+    text-align: center;
+    font-size: 20px;
+}
+.background {
+    background-image: url("../assets/bg_image.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+}
+
+.flexbox-form-container {
+    display: flex;
+    min-height: 100vh;
+    max-width: 80vh;
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+     /* Bordered form */
+form {
+    border: 1px solid #E7E7E7;
+    background-color: #FFFFFF;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #858484);
+    padding-top: 15%;
+    padding-bottom: 10%;
+}
+
+.login_heading{
+    text-align: center;
+    color: #000000;
+    font-family: 'poppins', sans-serif;
+    font-weight: bolder;
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #E7E7E7;
+    box-sizing: border-box;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+}
+
+/* Add padding to containers */
+.login_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 15%;   /* First value: padding top and bottom. Second value: padding on sides. */
+}
+.login_button {
+    background-color: #7D92DB;
+    color: white; padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    display: flex;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    font-size: 20px;
+    font-weight:bold;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease 0s;
+}
+  
+  /* Add a hover effect for buttons */
+.login_button:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
+    /*font-size: 22px;*/
+}
+.login_body {
+    min-height: 100vh;
+}
+/* The "Forgot password" text */
+.psw {
+    display: flex;
+    padding-top: 3%;
+    padding-bottom: 5%;
+    justify-content: space-between;
+}
+  
+.acc-creation-text {
+    display: flex;
+    justify-content: center;
+    padding-top: 4%;
+}
+
+
+/* Thankyou Page Styles */
+.thankyou-flexbox {
+    display: flex;
+    min-height: 100vh;
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.thankyou-buttons {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+  
+  .ty-add-button {
+    width: auto;
+    margin: 1em;
+    display: inline;
+    border: none;
+    cursor: pointer;
+    transition: all 0.5s ease 0s;
+    background-color: #7D92DB;
+    padding: 2% 5% 2% 5%;
+}
+  
+  .ty-return-button {
+    width: auto;
+    margin: 1em;
+    display: inline;
+    border: none;
+    cursor: pointer;
+    transition: all 0.5s ease 0s;
+    background-color: #9F4D96;
+    padding: 2% 5% 2% 5%;
+}
+
+.thankyouimg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+
+}
+/*Login and Thankyou Page Resizing*/
+@media (max-width: 1020px) {
+    .form, .flexbox-form-container {
+      max-width: 600px;
+      }
+    }
+  
+  @media (max-width: 800px) {
+    .form, .flexbox-form-container {
+      max-width: 500px;
+      }
+    .container {
+      padding: 10px 12%;
+      }
+    }
+  
+  @media (max-width: 500px) {
+    .form, .flexbox-form-container, p {
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      }
+    .psw {
+      display: flex;
+      padding-top: 3%;
+      padding-bottom: 5%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      }
+    .container {
+      padding: 10px 10%;
+      }
+    .thankyou-buttons {
+      flex-direction: column;
+      max-width: 80vh;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 2% 6% 2% 6%;
+    }
+  }
+
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------- */
