changed css tags in login_page

--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -1,17 +1,11 @@
-<head>
-<link rel="stylesheet" href="../public/css/login_thankyou.css">
-
-</head>
-<body>
+<body class="login_body">
 <div class="background">
     <div class="flexbox-form-container">
         <form action="action_page.php" method="post">
-            <div class="imgcontainer">
-                
-                <h2 class="heading">LOGIN</h2>
+                <h2 class="login_heading">LOGIN</h2>
             </div>
 
-            <div class="container">
+            <div class="login_container">
                 <label for="uname"><b>Email</b></label>
                 <input type="text" placeholder="Enter Email" name="uname" required>
 
@@ -23,7 +17,7 @@
                     </label>
                     <div>Forgot <a href="#">password?</a></div> 
                 </div>
-                <button type="submit">LOGIN</button>
+                <button class="login_button">LOGIN</button>
                 <div class="acc-creation-text">
                      <div>Don't have an account? <a href="#">Create an Account.</a></div> 
                  </div>
