--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -5,10 +5,10 @@
                 <h2 class="login_heading">LOGIN</h2>
             <div class="login_container">
                 <label for="uname"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="uname" required>
+                <input type="text" placeholder="Enter Email" name="uname">
 
                 <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
+                <input type="password" placeholder="Enter Password" name="psw">
                 <div class="psw">
                    <label>
                         <input type="checkbox" checked="checked" name="remember"> Remember me
