--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -791,6 +791,13 @@ input[type=text], input[type=password] {
 }
   
   .ty-add-button {
+    color: white; padding: 14px 20px;
+    display: flex;
+    font-size: 20px;
+    font-weight:bold;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     width: auto;
     margin: 1em;
     display: inline;
@@ -799,9 +806,23 @@ input[type=text], input[type=password] {
     transition: all 0.5s ease 0s;
     background-color: #7D92DB;
     padding: 2% 5% 2% 5%;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+}
+
+.ty-add-button:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
 }
   
   .ty-return-button {
+    color: white; padding: 14px 20px;
+    display: flex;
+    font-size: 20px;
+    font-weight:bold;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     width: auto;
     margin: 1em;
     display: inline;
@@ -810,7 +831,15 @@ input[type=text], input[type=password] {
     transition: all 0.5s ease 0s;
     background-color: #9F4D96;
     padding: 2% 5% 2% 5%;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
 }
+
+.ty-return-button:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
+}
+
 
 .thankyouimg {
     display: block;
