--- a/views/thankyou_page.hbs
+++ b/views/thankyou_page.hbs
@@ -1,6 +1,6 @@
 <body>
     <div class ="thankyou-flexbox">
-        <h1>Thank you!</h1>
+        <h1 class="heading">Thank you!</h1>
         <br>
         <p>Your data has been successfully recorded!</p>
         <img src="../public/assets/thankyou_image.png" class= "thankyouimg">
@@ -8,7 +8,6 @@
             <div class="thankyou-buttons">
                 <button class="ty-add-button">Add Another Entry</button>
                 <button class="ty-return-button">Return to Dashboard</button>
-
             </div>
         </div>
     </div>
