--- a/views/thankyou_page.hbs
+++ b/views/thankyou_page.hbs
@@ -3,7 +3,7 @@
         <h1 class="heading">Thank you!</h1>
         <br>
         <p>Your data has been successfully recorded!</p>
-        <img src="../public/assets/thankyou_image.png" class= "thankyouimg">
+        <img src="../assets/thankyou_image.png" class= "thankyouimg">
 
             <div class="thankyou-buttons">
                 <button class="ty-add-button">Add Another Entry</button>
