--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -1,7 +1,7 @@
 <body class="login_body">
 <div class="background">
     <div class="flexbox-form-container">
-        <form action="patient_dashboard.hbs" method="post">
+        <form class="loginform" action="patient_dashboard.hbs" method="post">
                 <h2 class="login_heading">LOGIN</h2>
             <div class="login_container">
                 <label for="uname"><b>Email</b></label>
