Added dateTime to measuredValue Schema, prints name and dateTime to clinician_dashboard

--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -31,7 +31,8 @@
                     </div>
                     <div>
                         <div class="patient-name">{{this.name}}</div>
-                        <div class="patient-last-updated">Last Updated: 01/01/2022</div>
+                        <div class="patient-last-updated">Last Updated:</div>
+                        <div class="patient-last-updated">{{this.dateTime}}</div>
                     </div>
                 </div>
                 <div class="flexbox-patient-button">
