DEBUG Access clinician_dashboard from login page

--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -16,12 +16,11 @@
                     <div>Forgot <a href="#">password?</a></div> 
                 </div>
                 <button class="login_button">LOGIN</button>
+                <a href="clinician_dashboard" class="login_button" style="background-color: red;">DEBUG***ACCESS CLINICIAN DASHBOARD***</a>
                 <div class="acc-creation-text">
                      <div>Don't have an account? <a href="#">Create an Account.</a></div> 
-                 </div>
-                
-            </div>
-            
+                </div> 
+            </div>   
         </form>
     </div>
 </div>
