--- a/views/thankyou_page.hbs
+++ b/views/thankyou_page.hbs
@@ -6,8 +6,8 @@
         <img src="../assets/thankyou_image.png" class= "thankyouimg">
 
             <div class="thankyou-buttons">
-                <button class="ty-add-button">Add Another Entry</button>
-                <button class="ty-return-button">Return to Dashboard</button>
+                <a class="ty-button purple1" href="record_health">Add Another Entry</a>
+                <a class="ty-button purple2" href="patient_dash">Return to Dashboard</a>
             </div>
         </div>
     </div>
