--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -519,6 +519,7 @@ background-color: #F7F7F7;
     text-align: center;
     align-items: center;
     justify-content: center;
+    padding: 1% 3% 1% 3%;
     border:none;
     cursor:pointer;
     transition: all 0.5s ease 0s;
@@ -656,7 +657,7 @@ img {
 }
 
 .purple1 {
-    background-color: #72A6E8;
+    background-color: #899CDE;
 }
 .purple2 {
     background-color: #8B7CC9;
@@ -784,7 +785,8 @@ input[type=text], input[type=password] {
 /* Thankyou Page Styles */
 .thankyou-flexbox {
     display: flex;
-    min-height: 100vh;
+    padding-top: 3%;
+    padding-bottom: 3%;
     margin-left: auto;
     margin-right: auto;
     align-content: center;
@@ -797,106 +799,77 @@ input[type=text], input[type=password] {
     flex-direction: row;
 }
   
-  .ty-add-button {
-    color: white; padding: 14px 20px;
+.ty-button {
     display: flex;
-    font-size: 20px;
-    font-weight:bold;
+    min-height: 90px;
+    max-width: 400px;
+    border-radius: 38px;
+    color: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    margin: 1% 2% 1% 2%;
+    font-size: 24px;
+    font-weight: bold;
     text-align: center;
     align-items: center;
     justify-content: center;
-    width: auto;
-    margin: 1em;
-    display: inline;
-    border: none;
-    cursor: pointer;
+    padding: 1% 3% 1% 3%;
+    border:none;
+    cursor:pointer;
     transition: all 0.5s ease 0s;
-    background-color: #7D92DB;
-    padding: 2% 5% 2% 5%;
-    border-radius: 38px;
-    filter: drop-shadow(4px 4px 3px #D4D4D4);
 }
-
-.ty-add-button:hover {
+.ty-button:hover {
     opacity: 0.8;
     transform: scale(1.05);
 }
   
-  .ty-return-button {
-    color: white; padding: 14px 20px;
-    display: flex;
-    font-size: 20px;
-    font-weight:bold;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    width: auto;
-    margin: 1em;
-    display: inline;
-    border: none;
-    cursor: pointer;
-    transition: all 0.5s ease 0s;
-    background-color: #9F4D96;
-    padding: 2% 5% 2% 5%;
-    border-radius: 38px;
-    filter: drop-shadow(4px 4px 3px #D4D4D4);
-}
-
-.ty-return-button:hover {
-    opacity: 0.8;
-    transform: scale(1.05);
-}
-
-
 .thankyouimg {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 30%;
-
+    max-width: 350px;
 }
 /*Login and Thankyou Page Resizing*/
 @media (max-width: 1020px) {
     .form, .flexbox-form-container {
       max-width: 600px;
-      }
     }
+}
   
-  @media (max-width: 800px) {
+ @media (max-width: 800px) {
     .form, .flexbox-form-container {
       max-width: 500px;
-      }
+    }
     .container {
       padding: 10px 12%;
-      }
     }
+}
   
-  @media (max-width: 500px) {
+@media (max-width: 500px) {
     .form, .flexbox-form-container, p {
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-      }
-    .psw {
-      display: flex;
-      padding-top: 3%;
-      padding-bottom: 5%;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      }
-    .container {
-      padding: 10px 10%;
-      }
-    .thankyou-buttons {
-      flex-direction: column;
-      max-width: 80vh;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 2% 6% 2% 6%;
+        max-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
     }
-  }
-
+    .psw {
+        display: flex;
+        padding-top: 3%;
+        padding-bottom: 5%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .container {
+        padding: 10px 10%;
+    }
+    .thankyou-buttons {
+        flex-direction: column;
+        max-width: 80vh;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 2% 6% 2% 6%;
+    }
+}
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------- */
