--- a/public/css/record_data.css
+++ b/public/css/record_data.css
@@ -156,6 +156,27 @@ input[placeholder='Type in comments'] {
     padding-bottom: 30%;
 }
 
+/* submit button */
+.submit{
+    text-align: center;
+    display: block;
+    font-size: 30px;
+    font-family: 'poppins', sans-serif;
+    color: white;
+    background-color: #7D92DB;
+    border-radius: 20px;
+    border-style: none;
+    width: 250px;
+    min-height: 55px;
+    padding: 0%;
+    align-content: center;
+    justify-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -10%;
+    margin-bottom: 7%;
+}
+
 
 
 
