--- a/views/record_health.html
+++ b/views/record_health.html
@@ -1,8 +1,6 @@
-<!-- DRAFT HTML. Work in progress-->
-<!-- Remove HTML after fixing styles-->
-
 <head>
     <link rel="stylesheet" href="record_data.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
@@ -11,11 +9,10 @@
 <br>
 
 <!-- container that stores timestamps and data inputs (e.g. record health)-->
-<div class="flex-container">
+<div class="grid-container">
     <!-- Column 1 - radio button form-->
     <!-- Form should send selection - need to modify this code once we have databased sorted -->
-    <div class="flex-child-timestamp">
-        <!-- saw this part online but not sure if relevant to us 'form action'-->
+    <div class="grid-timestamp">
         <form action="/send" method="POST">
             <h2 class="data-title">Timestamp</h2>
             <div class="radio1">
@@ -35,21 +32,24 @@
  
     <!-- Grid container that stores inputs-->
 
-        <div class="flex-child inputs">
+        <div class="grid-inputs">
             <h2 class="data-title"><label for="measurement">Measurement</label></h2><br>
-            <input type="text" id="measurement" name="measurement"><br>
+            <input type="text" id="measurement" name="measurement" placeholder="Enter number"><br>
 
             <h2 class="data-title"><label for="comments">Additional Comments</label></h2><br>
-            <input type="text" id="comments" name="comments">
+            <input type="text" id="comments" name="comments" placeholder="Type in comments">
         </div> 
        
     </div>
-    <!-- Submit Button -->
-
+        <div class="submit_button">
             <input class="submit" type="submit" value="submit">
+           </div>
 
         </form>
 
+    <!-- Column 2 -->
+ 
+    <!-- Grid container that stores buttons-->
     
 </div>
 
