record health css layout and icons

--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -4,7 +4,7 @@
 <br>
 
 <!-- container that stores timestamps and data inputs (e.g. record health)-->
-<div class="grid-content">
+<div class="grid-container">
     <!-- Column 1 - radio button form-->
     <!-- Form should send selection - need to modify this code once we have databased sorted -->
     <div class="grid-timestamp">
