fixed layout and link icons

--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -13,22 +13,22 @@
             <h2 class="data-title">Timestamp</h2>
             <div class="radio1">
                 <input type="radio" name="Selector" value="BloodGlucoseSelector" required>Blood Glucose<br>
-                 <img src="blood glucose.png" class="timestamp-icon">
+                 <img src="../assets/blood glucose.png" class="timestamp-icon">
             </div>
             <div class="radio2">
                 <input name="Selector" type="radio">Doses of Insulin<br>
-                 <img src="insulin icon.png" class="timestamp-icon">
+                 <img src="../assets/insulin icon.png" class="timestamp-icon">
             </div>
             <div class="radio3">
                 <input name="Selector" type="radio">Weight<br>
-                <img src="Weight White ver.png" class="timestamp-icon">
+                <img src="../assets/Weight White ver.png" class="timestamp-icon">
             </div>
             <div class="radio4">
                 <input name="Selector" type="radio">Exercise<br>
-                <img src="exercise icon.png" class="timestamp-icon">
+                <img src="../assets/exercise icon.png" class="timestamp-icon">
             </div>
         </div>
-    <!-- Column 2 -->
+    <!-- Column 2 --> 
  
     <!-- Grid container that stores inputs-->
 
