ty-button for responsive screen

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -865,9 +865,16 @@ input[type=text], input[type=password] {
     .thankyou-buttons {
         flex-direction: column;
         max-width: 80vh;
-        margin-left: auto;
-        margin-right: auto;
         padding: 2% 6% 2% 6%;
+    }
+    .ty-button {
+        font-size: 18px;
+        min-height: 60px;
+        margin: 3%;
+        padding: 2% 0% 2% 0%;
+    }
+    .thankyouimg {
+        width: 70%;
     }
 }
 
